Manifests/AlertManager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-svc
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: http-web

  selector:
    app.kubernetes.io/name: alertmanager
