Manifests/Grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
