Manifests/Java-App-service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-svc
  namespace: default
  labels:
    app: Java-app
spec:
  type: LoadBalancer
  selector:
    app: Java-app
  ports:
    - protocol: TCP
      port: 80              # Service port
      targetPort: 8000        # Target port on the pod
