Manifests/Prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-kube-prometheus-prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
